05/15/08 - First pass at overriding generators to produce specs [Matthew Bass]

03/18/08 - it_should_validate_presence_of helper added [Matthew Bass]

03/12/08 - layout.should.be nil is now supported [Rob Sanheim]

03/11/08 - Added content_type attr to dummy response for Rails 2.0 [Jason Rudolph]

03/06/08 - Added should.differ(:method).by wrapper for assert_difference [Matthew Bass]

02/18/08 - Added Rakefile, began adding tests [Matthew Bass]

02/08/08 - Added support for route checking (i.e. assert_generates) [Jason Rudolph]

01/10/08 - Added CHANGELOG and LICENSE [Matthew Bass]